--- a/00_Python_y_EDA.ipynb
+++ b/00_Python_y_EDA.ipynb
@@ -60,12 +60,7 @@
     "* Es gratuito y es una herramienta de [código abierto](https://es.wikipedia.org/wiki/C%C3%B3digo_abierto).\n",
     "* Está muy bien documentado.\n",
     "* Es ampliamente usado en la mayoría de las disciplinas científicas\n",
-    "* Tiene una gran comunidad de usuarios (no todos científicos), por lo que es fácil encontrar ayuda, tutoriales, foros, blogs, etc. por ejemplo en [StackOverflow](stackoverflow.com).\n",
-    "\n",
-    "\n",
-    "## !!!ESTO DEBERÍA SER PARTE DE ESTE MISMO REPOSITORIO O QUIZÁ MEJOR PODRÍA HABER UNA PARTE 2 DE PYTHON+ESTADÍSTICA!!!!\n",
-    "\n",
-    "Como complemento de este curso está disponible [este material](https://github.com/aloctavodia/EBAD/tree/master/00_intro_python) que es algo así como una breve guía de la sintaxis y conceptos básicos para programar en Python. Recomiendo consultarlo a medida que vayamos avanzando en el curso. "
+    "* Tiene una gran comunidad de usuarios (no todos científicos), por lo que es fácil encontrar ayuda, tutoriales, foros, blogs, etc. Por ejemplo en [StackOverflow](stackoverflow.com) o en telegram (@Python_cientifico)."
    ]
   },
   {
@@ -1540,11 +1535,11 @@
     "\n",
     "Mide la dispersión de un conjunto de valores. Es cero para un conjunto de valores idénticos.\n",
     "\n",
-    "$$V(X) = E[(x - \\mu)^2] = \\frac{1}{n} \\sum_{i=1}^n (x_i - \\mu)^2$$\n",
+    "$$V(X) = E[(x - \\mu)^2] = \\frac{1}{n} \\sum_{i=1}^n (x_i - \\mu)^2 \\tag{1}$$\n",
     "\n",
     "Donde $\\mu$ es la media de $X$,\n",
     "\n",
-    "Al igual que pasa con la media, se suele distinguir entre la varianza de la población $\\sigma^2$ y la varianza de una muestra $S^2$. Pero a diferencia de la media se puede probar que la formula anterior para $S^2$ subestima el valor de $\\sigma^2$. Un _mejor_ estimador se puede obtener con una ligera modificación para el cálculo de la varianza y es dividir por $n-1$ en vez de $n$. En la práctica esta _corrección_ solo es importante para cuando se tienen _pocos_ datos, a medida que los datos aumentan no hay mucha diferencia entre usar una u otra formula. Esto es facil de ver intuitivamente, para $n=2$ la diferencia entre $n$ y $n-1$ es relativamente grande, mientras que para $n=100$ esta diferencia es mucho más pequeña.\n",
+    "Al igual que pasa con la media, se suele distinguir entre la varianza de la población $\\sigma^2$ y la varianza de una muestra $s^2$. Pero a diferencia de la media se puede probar que la formula anterior para $s^2$ subestima el valor de $\\sigma^2$. Es posible obtener un mejor estimador con una ligera modificación de la ecuación 1, la cual consiste en dividir por $n-1$ en vez de $n$. En la práctica esta _corrección_ solo es importante para cuando se tienen _pocos_ datos, a medida que los datos aumentan no hay mucha diferencia entre usar una u otra formula. Esto es facil de ver intuitivamente, para $n=2$ la diferencia entre $n$ y $n-1$ es relativamente grande, mientras que para $n=100$ esta diferencia es mucho más pequeña.\n",
     "\n",
     "Para poder calcular la varianza usando Python tenemos todos los elementos necesarios. Veamos un posible algoritmo:"
    ]
@@ -1816,7 +1811,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Qué otras funciones están disponibles dentro de `math`? Una forma de averiguarlo es usando la ayuda que nos ofrece jupyter. Recordá que basta escribir `math.` seguido de `Tab` para que Jupyter nos haga recomendaciones!"
+    "Qué otras funciones están disponibles dentro de `math`? Una forma de averiguarlo es usando la ayuda que nos ofrece jupyter. Recordá que basta escribir `math.` seguido de `Tab` para que Jupyter nos haga recomendaciones!\n",
+    "\n",
+    "Existen varias formas de importar modulos en Python, una alternativa a lo ya visto es importar una función específica, por ejemplo `sqrt`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from math import sqrt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqrt(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También podemos importar una función pero cambiandole el nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sqrt as raiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raiz(4)"
    ]
   },
   {
@@ -1837,20 +1901,10 @@
    "source": [
     "## Ejercicios\n",
     "\n",
-    "* comparar la media y mediana para varios conjunto de datos usando las funciones lalala\n",
-    "* escribir una función para calcular la moda de un conjunto de valores discretos. ¿Cuán facil sería generalizar esa función para valores continuos?\n",
-    "* "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "cosas que están faltando:\n",
-    "\n",
-    "* Seguro: diccionarios, tuplas\n",
-    "* no-muy-seguro: while, operaciones sobre strings, más operadores, clases\n",
-    "* Seguro que no: sets, generadores, "
+    "1. comparar la media y mediana para varios conjunto de datos usando las funciones lalala\n",
+    "2. escribir una función para calcular la moda de un conjunto de valores discretos. ¿Cuán facil sería generalizar esa función para valores continuos?\n",
+    "3. Modificar la función que computa la varianza agregando un nuevo argumento, llamado \"ddof\" (delta degree of freedom) de forma tal que cuando ddof=1 la función use $n-1$ y cuando ddof=0 use $n$.\n",
+    "4. Escribir una función para calcular la media truncada. Es decir luego de haber eliminado una cantidad determinada de valores a ambos extremos del conjunto de datos, por ejemplo el 5% de los datos."
    ]
   }
  ],
