--- a/02_distribuciones_de_probabilidad.ipynb
+++ b/02_distribuciones_de_probabilidad.ipynb
@@ -22,26 +22,26 @@
    "source": [
     "## Probabilidades\n",
     "\n",
-    "La matemática es la lógica de la certeza mientras que la probabilidad es la lógica de la incerteza, dice Joseph K. Blitzstein condensando el pensamiento de cientos de personas antes que el. Entender como pensar en presencia de incertezas es central en Ciencia de Datos. Esta incerteza tiene diversas fuentes, incluyendo datos incompletos, errores de medición, modelos aproximados, etc.\n",
+    "La matemática es la lógica de la certeza mientras que la probabilidad es la lógica de la incerteza, dice Joseph K. Blitzstein condensando el pensamiento de cientos de personas antes que el. Entender como pensar en presencia de incertezas es central en Ciencia de Datos. Esta incerteza tiene diversas fuentes, incluyendo datos incompletos, errores de medición, límites de los diseños experimentales o dispositivos de medición, dificultad de observar ciertos eventos, aproximaciones, etc.\n",
     "\n",
-    "En este capítulo veremos una introducción breve a algunos conceptos centrales en probabilidad que nos permitiran entender mejor los fundamentos de varios métodos y procedimientos que veremos más adelante, para quienes tengan interés en profundizar en el tema recomiendo leer el libro [Introduction to Probability](https://www.crcpress.com/Introduction-to-Probability/Blitzstein-Hwang/p/book/9781466575578) de Joseph K. Blitzstein y Jessica Hwang.\n",
+    "En este capítulo veremos una introducción breve a algunos conceptos centrales en probabilidad que nos dará el lenguaje para comprender mejor los fundamentos de varios métodos y procedimientos que veremos más adelante, para quienes tengan interés en profundizar en el tema recomiendo leer el libro [Introduction to Probability](https://www.crcpress.com/Introduction-to-Probability/Blitzstein-Hwang/p/book/9781466575578) de Joseph K. Blitzstein y Jessica Hwang.\n",
     "\n",
     "En general, manejamos tres conceptos, relacionados entre si, sobre probabilidad:\n",
     "\n",
-    "* Decimos que una moneda tiene probabilidad 0.5 (o 50%) de caer cara, por que asumimos que ninguno de los dos eventos tiene preferencia sobre el otro. Es decir pensamos que ambos eventos son equi-probables. Esto se conoce como definición clásica o naive. Es la misma que usamos para decir que la probabilidad de obtener 3 al arrojar un dado (o cualquier número del 1 al 6) es de $\\frac{1}{6}$, o que la probabilidad de tener una hija es de 0.5. Esta definición se lleva a las patadas com preguntas como ¿Cuál es la probabilidad de que exista vida en Marte?, claramente 0.5 es una sobreestimación, ya que el evento _vida_ y el evento _no-vida_ no son igualmente probables.\n",
+    "* Decimos que una moneda tiene probabilidad 0,5 (o 50%) de caer cara, por que asumimos que ninguno de los dos eventos tiene preferencia sobre el otro. Es decir pensamos que ambos eventos son equi-probables. Esto se conoce como definición clásica o naíf. Es la misma que usamos para decir que la probabilidad de obtener 3 al arrojar un dado es de $\\frac{1}{6}$, o que la probabilidad de tener una hija es de 0,5. Esta definición se lleva a las patadas con preguntas como ¿Cuál es la probabilidad de existencia de vida en Marte?, claramente 0,5 es una sobreestimación, ya que el evento _vida_ y el evento _no-vida_ no son igualmente probables.\n",
     "\n",
-    "* Otra forma de ver a una probabilidad es como la frecuencia de eventos observados en una muestra. En esta concepción de probabilidad, en vez de asumir que los eventos son igualmente probables, diseñamos un experimento (en el sentido muy amplio de la palabra) y contamos cuantas veces vemos el evento que nos interesa respecto del total de intentos. Esta definición de probabilidad nos permitiría estimar que la probabilidad de obtener 2 al arrojar un dado $n$ veces es de por ejemplo $\\frac{1}{3}$ (y no necesariamente $\\frac{1}{6}$). Esta noción de probabilidad, llamada frecuentista, se suele asociar con la idea de la existencia de un número _correcto_ al que nos aproximamos a medida que aumenta $n$. Por lo tanto, en el límite de $n$ tendiendo a infinito obtenemos la respuesta _correcta_:\n",
+    "* Otra forma de ver a una probabilidad es como la frecuencia de eventos observados en una muestra. En esta concepción de probabilidad, en vez de asumir que los eventos son igualmente probables, diseñamos un experimento (en el sentido amplio de la palabra) y contamos cuantas veces observamos el evento que nos interesa respecto del total de intentos. Esta definición de probabilidad nos permitiría estimar que la probabilidad de obtener 2 al arrojar un dado $n$ veces es de por ejemplo $\\frac{1}{3}$ (y no necesariamente $\\frac{1}{6}$). Esta noción de probabilidad, llamada frecuentista, se suele asociar con la idea de la existencia de un número _correcto_ al que nos aproximamos a medida que aumenta $n$. Por lo tanto, en el límite de $n$ tendiendo a infinito obtenemos la respuesta _correcta_:\n",
     "\n",
     "$$p(x) = \\lim_{n \\rightarrow \\infty} \\frac{n_x}{n}$$\n",
     "\n",
     "\n",
-    "La definición frecuentista de probabilidad tiene el inconveniente que no es muy útil para pensar en problemas que ocurren una sola vez. Por ejemplo, ¿Cuál es la probabilidad que mañana llueva? Estrictamente solo hay un mañana y o bien lloverá o bien no. Los frecuentistas suelen evadir este problema recurriendo a experimentos imaginarios. En ese caso podríamos intentar estimar la probabilidad de lluvia para mañana imaginando que hay una cantidad muy grande de _mañanas_ y luego contando en cuantos de esos _mañanas_ llueve y en cuantos no. Esta _ficcion científica_ es perfectamente válida y muy útil.\n",
+    "La definición frecuentista de probabilidad tiene el inconveniente de no ser muy útil para pensar en problemas que ocurren una sola vez. Por ejemplo, ¿Cuál es la probabilidad que mañana llueva? Estrictamente solo hay un mañana y o bien lloverá o bien no. Los frecuentistas suelen evadir este problema recurriendo a experimentos imaginarios. En ese caso podríamos intentar estimar la probabilidad de lluvia para mañana imaginando que hay una cantidad muy grande de _mañanas_ y luego contando en cuantos de esos _mañanas_ llueve y en cuantos no. Esta _ficción científica_ es perfectamente válida y muy útil.\n",
     "\n",
     "\n",
     "* La tercer forma de pensar una probabilidad se refiere a cuantificar la incertidumbre que tenemos sobre la posibilidad que un evento suceda. Si el evento es imposible entonces la probabilidad de ese evento será exactamente 0, si en cambio el evento sucede siempre entonces la probabilidad de ese evento será de 1. Todos los valores intermedios reflejan grados de certeza/incerteza. Desde este punto de vista es _natural_ preguntarse cual es la probabilidad que la masa de Saturno sea $x$ kg, o hablar sobre la probabilidad de lluvia durante el 25 de Mayo de 1810, o la probabilidad de que mañana amanezca. Esta tercer interpretación del concepto de probabilidad es llamado Bayesiana y se puede pensar como una versión que incluye, como casos especiales, a las definiciones frecuentista y clásica.\n",
     "\n",
     "\n",
-    "A pesar de estas diferentes formas de interpretar el concepto de probabilidad la teoría de probabilidades nos ofrece un marco coherente y riguroso (en el sentido matemático) para trabajar con probabilidades."
+    "Independientemente de la interpretación del concepto de **probabilidad** la teoría de probabilidades nos ofrece un marco único, coherente y riguroso para trabajar con las probabilidades."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "source": [
     "## Probabilidades y conjuntos\n",
     "\n",
-    "El marco matemático para trabajar con las probabilidades se construye alrededor de los conjuntos (como los que vimos anteriormente). \n",
+    "El marco matemático para trabajar con las probabilidades se construye alrededor de los conjuntos matemáticos. \n",
     "\n",
     "El espacio muestreal $S$ de un experimento es el conjunto de todos los posibles resultados de un experimento. Un evento $A$ es un subconjunto de $S$, es decir $A \\subseteq S$. Decimos que $A$ ha ocurrido si el resultado del experimento es $A$. Por ejemplo, dado:\n",
     "\n",
@@ -60,21 +60,24 @@
     "\n",
     "$$A = \\{2\\}$$\n",
     "\n",
-    "Entonces podemos decir que $p(A)$ nos indica la factibilidad de que el evento $A$ ocurra. La cual NO es necesarimente $\\frac{1}{6}$. Es importante notar además que bajo otras circunstancias el evento $A$ podría ser otro subconjunto, por ejemplo  $A = \\{1,3,5\\}$, o tal vez $A = \\{4,5,6\\}$, todo dependerá del problema que tengamos interés en resolver.\n",
+    "Entonces podemos decir que $p(A)$ nos indica la factibilidad de que el evento $A$ ocurra. La cual NO es necesariamente $\\frac{1}{6}$. Es importante notar además que el evento $A$ podría estar definido por más de un elemento de $S$, por ejemplo  $A = \\{1,3,5\\}$, o tal vez $A = \\{4,5,6\\}$, todo dependerá del problema que tengamos interés en resolver.\n",
     "\n",
-    "Entonces, tenemos que los eventos son subconjuntos de un espacio muestreal definido y las probabilidades son números  asociados a la posibilidad que esos eventos ocurran, ya sea que esa \"posibilidad\" la definamos a partir de asumir todos los eventos equiprobables, o como una fracción de eventos favorables respecto del total de eventos o como el grado de certeza de obtener tal evento."
+    "Entonces, tenemos que los eventos son subconjuntos de un espacio muestreal definido y las probabilidades son números  asociados a la posibilidad que esos eventos ocurran, ya sea que esa \"posibilidad\" la definamos:\n",
+    "1. a partir de asumir todos los eventos equiprobables\n",
+    "2. como la fracción de eventos favorables respecto del total de eventos\n",
+    "3. como el grado de certeza de obtener tal evento"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Axiomas de Kolmogorov\n",
+    " ## Axiomas de Kolmogorov\n",
     "\n",
-    "Los axiomas de Kolmogorov permiten formalizar las nociones de probabilidad, una alternativa a estos axiomas es provista por Cox, y es preferida entre algunos Bayesianos. Nosotros veremos los axiomas de Cox por ser los más comunmente empleados.\n",
+    "Los axiomas de Kolmogorov permiten formalizar las nociones de probabilidad, una alternativa a estos axiomas es provista por Cox, y es preferida entre algunos Bayesianos. Nosotros veremos los axiomas de Kolmogorov por ser los más comúnmente empleados.\n",
     "\n",
     "1. La probabilidad de un evento es un número real mayor o igual a cero\n",
-    "    $$P(A)\\in \\mathbb {R} ,P(A)\\geq 0\\qquad \\forall A\\in S$$\n",
+    "    $$P(A)\\in \\mathbb {R} ,P(A)\\geq 0\\qquad \\forall A \\in S$$\n",
     "\n",
     "2. La probabilidad que algo ocurra es 1 y la probabilidad que algo fuera de $S$ ocurra es nula.\n",
     "    $$P(S) = 1$$\n",
@@ -85,7 +88,7 @@
     "\n",
     "Si obtengo un 1 en un dado no puedo obtener un 6 (ni ningún otro número), por lo tanto la probabilidad de obtener un 1 o un 3, o 6, es $P(1) + P(2) + P(6)$\n",
     "\n",
-    "De estos tres axiomas se desprende que las probabilidades están restringidas al intervalo[0, 1], es decir números que van entre 0 y 1 (incluyendo ambos extremos). "
+    "De estos tres axiomas se desprende que las probabilidades están restringidas al intervalo [0, 1], es decir números que van entre 0 y 1 (incluyendo ambos extremos)."
    ]
   },
   {
@@ -94,20 +97,20 @@
    "source": [
     "## Probabilidad condicional\n",
     "\n",
-    "Dado dos eventos $A$ y $B$ siendo $P(B) > 0$, la probabilidad $A$ dado $B$, que se simboliza como P(A | B) Es definida como:\n",
+    "Dado dos eventos $A$ y $B$ siendo $P(B) > 0$, la probabilidad $A$ dado $B$, que se simboliza como $P(A \\mid B)$ Es definida como:\n",
     "\n",
-    "$$P(A | B) = \\frac{P(A, B)}{P(B)}$$ \n",
+    "$$P(A \\mid B) = \\frac{P(A, B)}{P(B)}$$ \n",
     "\n",
     "\n",
-    "$P(A, B)$ es la probabilidad que ocurran los eventos $A$ y $B$, tambien se suele escribir como $P(A \\cap B)$, la probabilidad de la intersección de los eventos $A$ y $B$.\n",
+    "$P(A, B)$ es la probabilidad que ocurran los eventos $A$ y $B$, también se suele escribir como $P(A \\cap B)$, la probabilidad de la intersección de los eventos $A$ y $B$.\n",
     "\n",
-    "$P(A|B)$ es lo que se conoce como probabilidad condicional, y es la probabilidad de que ocurra A condicionada por el hecho que sabemos que B ha ocurrido. Por ejemplo la probabilidad que una vereda esté mojada es diferente de la probabilidad que la misma vereda esté mojada dado que está lloviendo. \n",
+    "$P(A \\mid B)$ es lo que se conoce como probabilidad condicional, y es la probabilidad de que ocurra el evento A condicionada por el hecho que sabemos que B ha ocurrido. Por ejemplo la probabilidad que una tal vereda esté mojada es diferente de la probabilidad que tal vereda esté mojada dado que está lloviendo. \n",
     "\n",
-    "Una probabilidad condicional se puede vizualizar como la reducción del espacio muestreal. Para ver esto de forma más clara vamos a usar una figura adatapda del libro [Introduction to Probability](https://www.crcpress.com/Introduction-to-Probability/Blitzstein-Hwang/p/book/9781466575578) de Joseph K. Blitzstein & Jessica Hwang. En ella se puede ver como pasamos de tener los eventos $A$ y $B$ en el espacio muestreal $S$, en el primer cuadro a tener $P(A \\mid B)$ en el último cuadro donde el espacio muestreal se redujo de $S$ a $B$. \n",
+    "Una probabilidad condicional se puede vizualizar como la reducción del espacio muestreal. Para ver esto de forma más clara vamos a usar una figura adaptada del libro [Introduction to Probability](https://www.crcpress.com/Introduction-to-Probability/Blitzstein-Hwang/p/book/9781466575578) de Joseph K. Blitzstein & Jessica Hwang. En ella se puede ver como pasamos de tener los eventos $A$ y $B$ en el espacio muestreal $S$, en el primer cuadro, a tener $P(A \\mid B)$ en el último cuadro donde el espacio muestreal se redujo de $S$ a $B$. \n",
     "\n",
     "<img src='imagenes/cond.png' width=600 >\n",
     "\n",
-    "El concepto de probabilidad condicionales está en el corazón de la estadística y es central para pensar en como debemos actualizar el conocimiento que tenemos de un evento a la luz de nuevos datos, veremos más sobre este en el curso \"Análisis Bayesiano de datos\" y en \"Machine Learning/mineria de datos\". Por ahora dejamos este tema con la siguiente aclaración. Todas las probabilidades son condicionales (respecto de algún supuesto o modelo) aún cuando no lo expresemos explícitamente, no existen probabilidades sin contexto."
+    "El concepto de probabilidad condicionales está en el corazón de la estadística y es central para pensar en como debemos actualizar el conocimiento que tenemos de un evento a la luz de nuevos datos, veremos más sobre esto en el curso \"Análisis Bayesiano de datos\" y en \"Machine Learning/mineria de datos\". Por ahora dejamos este tema con la siguiente aclaración. Todas las probabilidades son condicionales (respecto de algún supuesto o modelo) aún cuando no lo expresemos explícitamente, es decir no existen probabilidades sin contexto."
    ]
   },
   {
@@ -116,7 +119,7 @@
    "source": [
     "### Variables aleatorias discretas\n",
     "\n",
-    "Dado un experimento (en sentido amplio) cuyo espacio muestreal es  $S$, una variable aleatoria $X$ (o rv o también RV del ingles random variable) es una función que mapea los resultados $s \\in S$ a números en $\\mathbb{R}$. Es común usar letras del alfabeto latino en mayusculas.\n",
+    "Dado un experimento (en sentido amplio) cuyo espacio muestreal es  $S$, una variable aleatoria $X$ (o rv o también RV del inglés _random variable_) es una función que mapea los resultados $s \\in S$ a números en $\\mathbb{R}$. Para indicar variables aletorias se suelen usar letras del alfabeto latino en mayusculas.\n",
     "\n",
     "Entonces una variable aleatoria $X$ asigna un número $X(s)$ a cada posible resultado $s$ de un experimento. Es importante notar que el mapeo es determinista, la aleatoriedad está dada por el experimento, es decir por no poder definir de forma precisa cual será el resultado. Las probabilidades de cada evento $s$ vienen dado por una función de probabilidad.\n",
     "\n",
