simplifica explicación variables discretas

--- a/Notación.ipynb
+++ b/Notación.ipynb
@@ -21,11 +21,21 @@
     "\n",
     "$\\sim$ distribuido como\n",
     "\n",
+    "$\\forall x$ para todo los $x$ es cierto que...\n",
+    "\n",
+    "$A \\subseteq S$ $A$ es un subconjunto de $S$\n",
+    "\n",
+    "$\\neg A$ no A, si $A$ es el conjunto de los números pares entonces $\\neg A$ es el conjunto de los impares\n",
+    "\n",
+    "$ x \\in S$ x es un elemento de S\n",
+    "\n",
+    "$\\bigcup _{i=a}^{b}$ la unión de todos los $i$ elementos desde $a$ a $b$\n",
+    "\n",
     "$\\mathbb{E}[\\cdot]$ valor esperado\n",
     "\n",
     "$p(\\cdot)$ densidad de probabilidad o función de masa\n",
     "\n",
-    "$p(x \\mid y)$ densidad de probabilidad condicional de $x$ dado $y$\n",
+    "$p(x \\mid y)$ (densidad de) probabilidad de $x$ dado $y$\n",
     "\n",
     "$\\ell(\\cdot)$ logaritmo natural del likelihood (log-likelihood)\n",
     "\n",
@@ -69,12 +79,22 @@
     "\n",
     "$||\\mathbf{x}||_2$ norma euclidea o $\\ell_2$\n",
     "\n",
+    "\n",
     "Notas:\n",
     "\n",
     "* Se usa $\\log$ para indicar logaritmos y se asumen base $e$ (logaritmo natural) salvo se indique lo contrario.\n",
     "\n",
     "* Usamos letras romanas minúsculas en negrita para vectores ($\\mathbf{a}$) y letras romanas mayúsculas en negrita para matrices ($\\mathbf{A})$. Se asumen que los vectores son vectores columna, a menos que se indique lo contrario."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
