--- a/00_Python_y_EDA.ipynb
+++ b/00_Python_y_EDA.ipynb
@@ -888,7 +888,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -2322,18 +2324,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uno de estos métodos más conumnente usados es `format`, que permite darle formatear `strings`."
+    "Para escribir un string podemos usar comillas simples o dobles, cual usar es una cuestión de preferencia."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'simples'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'ciencia '.format()"
+    "'simples'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dobles'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"dobles\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También es posible usar comillas triples (triples-simples o triples-dobles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tri-\\nples'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''tri-\n",
+    "ples'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La ventaja de las comilas triples es que permite escribir un string que ocupe varias lineas (como ya vimos con los docstrings). `\\n` se usa para indicar que el `string` contiene una _nueva linea de texto_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tri-\n",
+      "ples\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('''tri-\n",
+    "ples''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tri-\n",
+      "ples\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('tri-\\nples')"
    ]
   },
   {
@@ -2358,7 +2461,7 @@
     "* [PyMC3:](http://pymc-devs.github.io/pymc3/) - Estadística Bayesiana\n",
     "* [SymPy](http://www.sympy.org/en/index.html) - Matemática simbólica\n",
     "* [Sage](http://sagemath.org/) - Es un entorno matemática basado en Python y varias de las bibliotecas arriba mencionadas\n",
-    "* _agregá tu paquete favorito acá_\n",
+    "* _agregá tu paquete favorito_\n",
     "\n",
     "Incluso algunas bibliotecas se construyen sobre otras bibliotecas. En el siguiente esquema se ve parte del ecosistema de Python ordenado (radialmente). Donde un nivel se apoya sobre los inferiores como en un cebolla.\n",
     "\n",
@@ -2496,13 +2599,16 @@
    "source": [
     "## Ejercicios\n",
     "\n",
-    "\n",
-    "\n",
-    "1. ¿Cúal es la diferencia entre muestra y población?\n",
     "1. ¿Cual es el resultado de sumar los elementos de una lista que contiene strings? Explique\n",
     "1. ¿Cual es el resultado de sumar los elementos de una lista que contiene solo booleanos? Explique\n",
     "1. Dentro de Jupyter se puede acceder a la ayuda escribiendo `?` o  `??`.¿Cual es la diferencia entre usar una u otra forma?\n",
     "1. En un lista que contiene 5 elementos, que elementos serán devueltos al usar los índices 1, -2, -6\n",
+    "1. Ejecutar en una celda:\n",
+    "\n",
+    "    `import this`\n",
+    "\n",
+    "    Este texto es conocido como el Zen de Python. Es común que al escribir código pensemos en más de una forma de escribir lo mismo. Dentro de la comunidad de Python se suele dar preferencia a una de estas formas sobre las otras, debido a que es más simple de comprender, menos propensa a errores, más eficiente, más comunmente usada, etc. Un código que satisface estos criterios, mejor que otro, se dice que es _Pytónico_.  \n",
+    "1. ¿Cúal es la diferencia entre muestra y población?\n",
     "1. Comparar la media y mediana para varios conjunto de datos usando las funciones antes implementadas.\n",
     "1. Modificar la función que computa la varianza agregando un nuevo argumento, llamado \"ddof\" (_delta degree of freedom_) de forma tal que cuando ddof=1 la función use $n-1$ y cuando ddof=0 use $n$.\n",
     "1. Escribir una función para calcular la media truncada. Es decir el valor de la media luego de haber eliminado una cantidad determinada (por ej el 5%) de valores a ambos extremos del conjunto de datos.\n",
