arregla error ortográfico

--- a/01_arreglos_graficos_y_2D.ipynb
+++ b/01_arreglos_graficos_y_2D.ipynb
@@ -1211,7 +1211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparasiones y máscaras de booleanos\n",
+    "## Comparaciones y máscaras de booleanos\n",
     "\n",
     "Así como es posible sumar un número a un arreglo, es posible hacer comparaciones elemento-a-elemento. Por ejemplo podemos preguntar que valores de `M` son mayores a 3, el resultado será una `array` con booleanos."
    ]
